RESOLVED FIXED61153
WebView loses firstResponder status when entering full-screen mode.
https://bugs.webkit.org/show_bug.cgi?id=61153
Summary WebView loses firstResponder status when entering full-screen mode.
Andy Estes
Reported 2011-05-19 16:10:08 PDT
Space button does not play/pause video on apple.com when in full-screen mode.
Attachments
Patch (13.26 KB, patch)
2011-05-19 16:35 PDT, Andy Estes
darin: review+
Andy Estes
Comment 1 2011-05-19 16:25:14 PDT
Andy Estes
Comment 2 2011-05-19 16:35:16 PDT
Darin Adler
Comment 3 2011-05-19 19:23:03 PDT
Comment on attachment 94145 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=94145&action=review > Source/WebKit/mac/Misc/WebNSWindowExtras.m:55 > + if ([responder respondsToSelector:@selector(isDescendantOf:)] > + && [(id)responder isDescendantOf:view]) Should keep this expression all on one line to avoid awkward placement of the (id). I suggest checking isKindOfClass:[NSView class] instead of specifically checking for this selector. I don’t think it’s really so convenient to have this as an NSWindow method. I would suggest just making a helper function that does this. But I guess you made it a method so you could share with WebKit2. I am not really sure that’s the best practice way to make code you can share with WebKit1 and WebKit2. Might be worth asking Sam about that.
Andy Estes
Comment 4 2011-05-20 15:22:05 PDT
(In reply to comment #3) > (From update of attachment 94145 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=94145&action=review > > > Source/WebKit/mac/Misc/WebNSWindowExtras.m:55 > > + if ([responder respondsToSelector:@selector(isDescendantOf:)] > > + && [(id)responder isDescendantOf:view]) > > Should keep this expression all on one line to avoid awkward placement of the (id). > > I suggest checking isKindOfClass:[NSView class] instead of specifically checking for this selector. > > I don’t think it’s really so convenient to have this as an NSWindow method. I would suggest just making a helper function that does this. But I guess you made it a method so you could share with WebKit2. I am not really sure that’s the best practice way to make code you can share with WebKit1 and WebKit2. Might be worth asking Sam about that. Thanks Darin. I'll ping Sam for suggestions.
Andy Estes
Comment 5 2011-05-20 15:51:21 PDT
Andy Estes
Comment 6 2011-05-20 18:41:46 PDT
(In reply to comment #4) > (In reply to comment #3) > > (From update of attachment 94145 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=94145&action=review > > > > > Source/WebKit/mac/Misc/WebNSWindowExtras.m:55 > > > + if ([responder respondsToSelector:@selector(isDescendantOf:)] > > > + && [(id)responder isDescendantOf:view]) > > > > Should keep this expression all on one line to avoid awkward placement of the (id). > > > > I suggest checking isKindOfClass:[NSView class] instead of specifically checking for this selector. > > > > I don’t think it’s really so convenient to have this as an NSWindow method. I would suggest just making a helper function that does this. But I guess you made it a method so you could share with WebKit2. I am not really sure that’s the best practice way to make code you can share with WebKit1 and WebKit2. Might be worth asking Sam about that. > > Thanks Darin. I'll ping Sam for suggestions. Sam suggested I add the helper function to WebCore. I'll do that in a follow-up patch.
Note You need to log in before you can comment on or make changes to this bug.