third_party/WebKit/Source/WebKit/mac/Misc/WebNSWindowExtras.h
@@ -31,5 +31,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 @interface NSWindow (WebExtras)
 // centers "visually", putting 1/3 of the remaining space above, and 2/3 below
-- (void)centerOverMainWindow; 
+- (void)centerOverMainWindow;
+- (void)makeResponder:(NSResponder *)responder firstResponderIfDescendantOfView:(NSView *)view;
 @end
