third_party/WebKit/Source/WebKit/mac/WebView/WebFullScreenController.mm
@@ -28,6 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "WebFullScreenController.h"
 
+#import "WebNSWindowExtras.h"
 #import "WebPreferencesPrivate.h"
 #import "WebWindowAnimation.h"
 #import "WebViewInternal.h"
@@ -274,6 +275,7 @@ private:
 
         WebView *webView = [self webView];
         NSWindow *webWindow = [webView window];
+        NSResponder *webWindowFirstResponder = [webWindow firstResponder];
 
         // Do not swap the placeholder into place if already is in a window,
         // assuming the placeholder's window will always be the webView's 
@@ -285,6 +287,7 @@ private:
             [[webView superview] replaceSubview:webView with:_placeholderView];
             
             [[[self window] contentView] addSubview:webView];
+            [[self window] makeResponder:webWindowFirstResponder firstResponderIfDescendantOfView:webView];
             [webView setAutoresizingMask:NSViewWidthSizable|NSViewHeightSizable];
             [webView setFrame:[(NSView *)[[self window] contentView] bounds]];
         }
@@ -524,10 +527,12 @@ private:
     if (_placeholderView && [_placeholderView window]) {
         // Move the webView back to its own native window:
         WebView* webView = [self webView];
+        NSResponder *fullScreenWindowFirstResponder = [[self window] firstResponder];
         [webView setFrame:[_placeholderView frame]];
         [webView setAutoresizingMask:[_placeholderView autoresizingMask]];
         [webView removeFromSuperview];
         [[_placeholderView superview] replaceSubview:_placeholderView with:webView];
+        [[webView window] makeResponder:fullScreenWindowFirstResponder firstResponderIfDescendantOfView:webView];
         
         NSWindow *webWindow = [[self webView] window];
 #if !defined(BUILDING_ON_LEOPARD) && !defined(BUILDING_ON_SNOW_LEOPARD)
