third_party/WebKit/Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm
@@ -40,6 +40,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import <QuartzCore/QuartzCore.h>
 #import <WebCore/FloatRect.h>
 #import <WebCore/IntRect.h>
+#import <WebKit/WebNSWindowExtras.h>
 #import <WebKitSystemInterface.h>
 
 static const NSTimeInterval tickleTimerInterval = 1.0;
@@ -250,12 +251,14 @@ static void exitCompositedModeRepaintCompleted(WKErrorRef, void* context);
         // Swap the webView placeholder into place.
         if (!_webViewPlaceholder)
             _webViewPlaceholder.adoptNS([[NSView alloc] init]);
+        NSResponder *webWindowFirstResponder = [[_webView window] firstResponder];
         [self _swapView:_webView with:_webViewPlaceholder.get()];
         
         // Then insert the WebView into the full screen window
         NSView* contentView = [[self _fullScreenWindow] contentView];
         [contentView addSubview:_webView positioned:NSWindowBelow relativeTo:nil];
         [_webView setFrame:[contentView bounds]];
+        [[self window] makeResponder:webWindowFirstResponder firstResponderIfDescendantOfView:_webView];
         
         NSWindow *webWindow = [_webViewPlaceholder.get() window];
 #if !defined(BUILDING_ON_LEOPARD) && !defined(BUILDING_ON_SNOW_LEOPARD)
@@ -299,6 +302,7 @@ static void exitCompositedModeRepaintCompleted(WKErrorRef, void* context);
     
     // Swap the webView back into its original position:
     if ([_webView window] == [self window]) {
+        NSResponder *fullScreenWindowFirstResponder = [[self _fullScreenWindow] firstResponder];
 #if defined(BUILDING_ON_LEOPARD) || defined(BUILDING_ON_SNOW_LEOPARD)
         // Work around a bug in AppKit <rdar://problem/9443385> where moving a 
         // layer-hosted view from a layer-backed view to a non-layer-backed view
@@ -310,6 +314,7 @@ static void exitCompositedModeRepaintCompleted(WKErrorRef, void* context);
         }
 #endif
         [self _swapView:_webViewPlaceholder.get() with:_webView];
+        [[_webView window] makeResponder:fullScreenWindowFirstResponder firstResponderIfDescendantOfView:_webView];
         NSWindow* webWindow = [_webView window];
 #if !defined(BUILDING_ON_LEOPARD) && !defined(BUILDING_ON_SNOW_LEOPARD)
         // In Lion, NSWindow will animate into and out of orderOut operations. Suppress that
