third_party/WebKit/Source/WebKit/mac/Misc/WebNSWindowExtras.m
@@ -50,4 +50,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     [self setFrameOrigin:origin];
 }
 
+- (void)makeResponder:(NSResponder *)responder firstResponderIfDescendantOfView:(NSView *)view
+{
+    if ([responder isKindOfClass:[NSView class]] && [(id)responder isDescendantOf:view])
+        [self makeFirstResponder:responder];
+}
+
 @end
